Trying to fix contact form on iphone

--- a/css/apt_main_page_little.css
+++ b/css/apt_main_page_little.css
@@ -997,6 +997,7 @@ section {
 .apt_contact{
     display:inline-block;
     position:absolute;
+    left: 0px;
     width:80%;
     height:350px;
     padding: 0px 0px 10px 10px;
